vbnc/vbnc/tests/Errors/30060-20.vb
Imports System
Class T
    Const M_String As int32 = "#1/1/2008#"
End Class